# hello-vulkan

./: CHANGELOG.md  flake.nix  mwe.cabal
app/: Main.hs
src/: Core.hs  GLFW.hs  Vulkan.hs
src/Control/Monad/Logic/: Extra.hs
src/Core/: Camera.hs  Extra.hs  Input.hs  Log.hs  Loop.hs  Math.hs
src/Core/Animation/: Float.hs  Vec3.hs
src/Core/Math/: Mat4.hs  Plane.hs  Quaternion.hs  Ray.hs  Vec2.hs  Vec3.hs  Vec4.hs
src/Data/Bits/: Extra.hs
src/Data/List/: Extra.hs
src/Data/Ord/: Extra.hs
src/GLFW/: Input.hs  Instance.hs  Window.hs
src/Vulkan/: Buffer.hs  Builder.hs  Command.hs  CommandBuffer.hs  CommandPool.hs  DescriptorSet.hs  DescriptorSetAllocator.hs  Device.hs  Exception.hs  Fence.hs  Frame.hs  Framebuffer.hs  Image.hs  ImageView.hs  Instance.hs  Memory.hs  PhysicalDevice.hs  Pipeline.hs  PipelineLayout.hs  Queue.hs  RenderPass.hs  Result.hs  Sampler.hs  Semaphore.hs  Shader.hs  Swapchain.hs  Version.hs  VirtualFrame.hs  Window.hs
