cabal-version:      3.4
name:               mwe
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             ners
maintainer:         ners@gmx.ch
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable mwe
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, GLFW-b, vulkan, fir
    hs-source-dirs:   app
    default-language: GHC2021
