cabal-version:      3.4
name:               mwe
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             ners
maintainer:         ners@gmx.ch
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoFieldSelectors
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PackageImports
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns

executable mwe
    import:           common
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        mwe
    hs-source-dirs:   app
    default-language: GHC2021

library
    import: common
    build-depends:
        GLFW-b,
        base,
        bytestring,
        containers,
        extra,
        eff,
        fir,
        generic-lens,
        lens,
        time,
        unliftio-core,
        vector,
        vulkan,
    hs-source-dirs: src
    default-language: GHC2021
    exposed-modules:
        Core
        GLFW
        Vulkan
