cabal-version:      3.4
name:               mwe
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             ners
maintainer:         ners@gmx.ch
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoFieldSelectors
        DuplicateRecordFields
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PackageImports
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns

executable mwe
    import:           common
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        mwe
    hs-source-dirs:   app
    default-language: GHC2021

library
    import: common
    build-depends:
        base,
        bytestring,
        containers,
        eff,
        extra,
        fir,
        generic-lens,
        GLFW-b,
        lens,
        logict,
        time,
        unliftio-core,
        vector,
        vulkan,
    hs-source-dirs: src
    default-language: GHC2021
    exposed-modules:
        Core
        GLFW
        Vulkan
    other-modules:
        Control.Monad.Logic.Extra
        Core.Extra
        Core.Input
        Core.Log
        Core.Loop
        Core.Math
        Core.Math.Mat4
        Core.Math.Plane
        Core.Math.Quaternion
        Core.Math.Ray
        Core.Math.Vec2
        Core.Math.Vec3
        Core.Math.Vec4
        Data.Bits.Extra
        Data.List.Extra
        Data.Ord.Extra
        GLFW.Input
        GLFW.Instance
        GLFW.Window
        Vulkan.Buffer
        Vulkan.Builder
        Vulkan.Command
        Vulkan.CommandBuffer
        Vulkan.CommandPool
        Vulkan.DescriptorSet
        Vulkan.DescriptorSetAllocator
        Vulkan.Device
        Vulkan.Exception
        Vulkan.Fence
        Vulkan.Frame
        Vulkan.Framebuffer
        Vulkan.Image
        Vulkan.ImageView
        Vulkan.Instance
        Vulkan.Memory
        Vulkan.PhysicalDevice
        Vulkan.Pipeline
        Vulkan.PipelineLayout
        Vulkan.Queue
        Vulkan.RenderPass
        Vulkan.Result
        Vulkan.Sampler
        Vulkan.Semaphore
        Vulkan.Shader
        Vulkan.Swapchain
        Vulkan.Version
        Vulkan.VirtualFrame
        Vulkan.Window
